--- a/style.css
+++ b/style.css
@@ -35,3 +35,12 @@ caption {
 }
 
 /* End of copied stylesheet */
+
+body {
+    display: flex;
+    gap: 10px 10px;
+}
+
+button {
+    height: 40px;
+}
