--- a/style.css
+++ b/style.css
@@ -44,3 +44,16 @@ body {
 button#addNewBookButton {
     height: 40px;
 }
+
+/* Pseudo-element of the dialog modal */ 
+
+::backdrop {
+  background-image: linear-gradient(
+    45deg,
+    magenta,
+    rebeccapurple,
+    dodgerblue,
+    green
+  );
+  opacity: 0.75;
+}
